# dcat-tool

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  continuous-integration.yml
docs/: dhsnamespace.html  index.html  index.md
docs/samples/: DIP_Excel_Template.xlsx  DIP_full_record.jsonld  DIP_small_record.jsonld
schemata/: collect.csv  collect.ttl  dcat.ttl  dcterms.ttl  dhs.ttl  dhs_collect.ttl  foaf.ttl  usg.ttl
schemata/tests/: collect_test.py
src/: Makefile  OUTDEFS2.html  README.md  __init__.py  cherrypy.conf  dcat_tool.py  dhs_ontology.py  easy_workbook.py  hello.py  instructions.md  template_reader.py
src/mwe/: mwe_demo.py  mwe_schema.ttl
src/static/: style.css
src/templates/: definitions.html  dhsnamespace.html  index.html  introduction.html
src/tests/: Makefile  build_excel_tests.py  build_json_tests.py  dcat_tool_test.py  template_maker_test.py  template_reader_test.py  test-1.json  test-2.json  test-3.json  test-4.json  test-5.json  test-6.json  test_excel-1.xlsx  test_template.xlsx  test_template_clean.json  test_template_clean.xlsx  test_template_error_accessLevel.json  test_template_error_accessLevel.xlsx  test_template_error_uid.json  test_template_error_uid.xlsx  validation_tests.py
