[metadata]
name = dcat-tool-garfi303
version = 0.0.1
author = Simson L. Garfinkel
author_email = simson.garfinkel@hq.dhs.gov
description = A program to perform DCAT manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/usdhs/dcat-tool.git
project_urls =
    Bug Tracker = https://github.com/usdhs/dcat-tool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: U.S. Government Public Domain
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src